<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="56dp"
    android:orientation="vertical"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_label" />

    <EditText
        android:id="@+id/edtpara"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/to_hint" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_txtlogin" />

        <EditText
            android:id="@+id/edtlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to_edtlogin" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_txtsenha" />

        <EditText
            android:id="@+id/edtsenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to_edtsenha" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edtassunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to_edtassunto" />
    </LinearLayout>

    <EditText
        android:id="@+id/edtmessage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="top"
        android:hint="@string/message" />

    <Button
        android:id="@+id/btnenviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/send"
        />
</LinearLayout>