<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/autores"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Autores" />
        <item
            android:id="@+id/nav_alunos"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Alunos" />
        <item
            android:id="@+id/biografia"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Biografias" />
        <item
            android:id="@+id/jogo1"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Jogo1" />
        <item
            android:id="@+id/jogo2"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/jogo2" />
        <item
            android:id="@+id/newAct"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/kotlinact" />
    </group>

</menu>